# LearningOpenGL

./: README.md  config
Coordinate-Systems/: matrixTest.cpp
Coordinate-Systems/shaders/vertex/: 3Dbasics.vs
Coordinate-Systems/src/: main.cpp
PlayAround/: CMakeLists.txt
PlayAround/hdr/: Camera.hpp  Cube.hpp  FPCharacter.hpp
PlayAround/shaders/vertex/: 3Dbasics.vs
PlayAround/src/: Camera.cpp  Cube.cpp  Shader.cpp  main.cpp
Shaders/: CMakeLists.txt
Shaders/hdr/: Shader.hpp
Shaders/shaders/fragment/: basic.fs
Shaders/shaders/vertex/: basic.vs
Shaders/src/: basicShader.fs  main.cpp
Textures/: CMakeLists.txt
Textures/shaders/fragment/: basic.fs
Textures/shaders/vertex/: basic.vs
Textures/src/: main.cpp  stb_image.cpp
Transformations/: CMakeLists.txt
Transformations/shaders/fragment/: basic.fs
Transformations/shaders/vertex/: transform.vs
Transformations/src/: main.cpp
firstTriangle/: CMakeLists.txt
firstTriangle/src/: main.cpp
gettingStarted/PlayAround/: CMakeLists.txt
gettingStarted/PlayAround/hdr/: Cube.hpp  Shader.hpp  Shader2.hpp  playAround.h
gettingStarted/PlayAround/hdr/Cameras/: Camera.hpp  FpsCamera.hpp  FreeFlightCam.hpp  IsometricCam.hpp  TrackingCam.hpp
gettingStarted/PlayAround/shaders/fragment/: basic.fs
gettingStarted/PlayAround/shaders/vertex/: 3Dbasics.vs  basic.vs
gettingStarted/PlayAround/src/: Cube.cpp  FPCharacter.cpp  Shader.cpp  Shader2.cpp  main.cpp  setupArrays.cpp
gettingStarted/PlayAround/src/Cameras/: Camera.cpp  FpsCamera.cpp  FreeFlightCam.cpp  IsometricCam.cpp  TrackingCam.cpp
